# Sparet-BE

./: .coverage  .dockerignore  .env  .flake8  .gitignore  README.md  alembic.ini  database.db  docker-compose.yml  dockerfile  pyproject.toml  test.py  testing.db
.github/workflows/: test.yml
app/: deps.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: accounts.py  plaid.py  transactions.py  users.py
app/crud/: __init__.py  base.py  crud_account.py  crud_transaction.py
app/models/: Investor.py  __init__.py  account.py  account_item.json  balance.py  investment.py  item.py  location.py  payment_meta.py  person.py  test.py  transaction.py  transactions.json  user.py  withdrawal.py  withdrawl.py
app/services/plaid/: client.py  models.py
app/services/revolut/: authentication.py
app/tests/: test_accounts_endpoints.py  test_accounts_sql.py  test_factories.py  test_main.py  test_models.py  test_pytest.py  test_sql_accounts.py  test_sql_users.py  test_unittest.py
app/tests/account/: test_account_crud.py  test_account_pydantic.py  test_accounts_endpoints.py  test_accounts_sql.py
app/tests/data/: account.json  account_item.json
app/tests/payment_meta/: test_payment_meta_sql.py
app/tests/transaction/: test_transaction_crud.py
app/tests/utils/: conftest.py
app/utils/: config.py  deps.py
design/: table.drawio
migrations/: env.py  script.py.mako
tests/: test_cookie.py  test_pytest.py  test_sparet.py  test_sql_users.py  test_unittest.py
