[tool.poetry]
name = "Sparet"
version = "0.1.0"
description = "A round-up application for Transactions that invests in Green Companies"
authors = ["Matthew Aylward <aylwardmatthew@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
sqlmodel = "^0.0.4"
asyncpg = "^0.24.0"
alembic = "^1.7.5"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
coverage = {extras = ["toml"], version = "^6.2"}
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100