[tool.poetry]
name = "Sparet"
version = "0.1.0"
description = "A round-up application for Transactions that invests in Green Companies"
authors = ["Matthew Aylward <matthewtyleraylward@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
asyncer = "^0.0.1"
sqlmodel = "^0.0.6"
oauthlib = "^3.1.1"
uvicorn = "^0.16.0"
pytest = "^6.2.5"
python-dotenv = "^0.19.2"
aiohttp = "^3.8.1"
pydantic-factories = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
